// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="Navigation navbar navbar-expand-md"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      Quotable
    </a>
    <ul
      class="navbar-nav ml-auto"
    >
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link-logged-in"
          href="/famousquotes"
        >
          Famous Quotes
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link-logged-in"
          href="/famousauthors"
        >
          Famous Authors
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link-logged-in"
          href="/quoteoftheday"
        >
          Quote of the Day
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link-logged-in"
          href="/communityquotes"
        >
          Community Quotes
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link-logged-in"
          href="/profile"
        >
          Profile
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link-logged-in"
          href="/about"
        >
          About
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link-logged-in"
          href="/"
        >
          Log out testfirst
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="Navigation navbar navbar-expand-md"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      Quotable
    </a>
    <ul
      class="navbar-nav"
    >
      <li
        class="nav-item-logged-out"
      >
        <a
          class="nav-link"
          href="/quoteoftheday"
        >
          Quote of The Day
        </a>
      </li>
      <li
        class="nav-item-logged-out"
      >
        <a
          class="nav-link"
          href="/about"
        >
          About
        </a>
      </li>
      <li
        class="nav-item-logged-out"
      >
        <a
          class="nav-link"
          href="/login"
        >
          Login
        </a>
      </li>
      <li
        class="nav-item-logged-out"
      >
        <a
          class="nav-link"
          href="/signup"
        >
          Sign Up
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
